--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "license": "MIT",
   "dependencies": {
     "next": "^12.1.0",
+    "next-compose-plugins": "^2.2.1",
+    "next-transpile-modules": "^9.0.0",
     "nextra": "^1.1.0",
     "nextra-theme-docs": "^1.2.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "prettier": "^2.0.5"
