--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "@heroicons/react": "^2.0.11",
+    "axios": "^0.27.2",
     "local-storage": "^2.0.0",
     "next": "^12.1.0",
     "next-compose-plugins": "^2.2.1",
@@ -20,7 +21,8 @@
     "nextra-theme-docs": "^1.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "prettier": "^2.0.5"
