--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "react-tooltip": "^4.2.21",
     "swr": "^1.3.0"
   },
   "devDependencies": {
