--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Shu Ding",
   "license": "MIT",
   "dependencies": {
+    "@faker-js/faker": "^7.5.0",
     "@heroicons/react": "^2.0.11",
     "axios": "^0.27.2",
     "local-storage": "^2.0.0",
@@ -20,6 +21,7 @@
     "nextra": "^1.1.0",
     "nextra-theme-docs": "^1.2.2",
     "react": "^17.0.1",
+    "react-collapsed": "^3.4.0",
     "react-dom": "^17.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^4.2.21",
