Remove lighthouse references and update metadata

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lighthouse",
+  "name": "northstar",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,6 @@
     "start": "next start",
     "build": "next build"
   },
-  "author": "Shu Ding",
   "license": "MIT",
   "dependencies": {
     "@faker-js/faker": "^7.5.0",
