--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@playwright/test": "1.27.1",
     "prettier": "^2.0.5"
   },
   "prettier": {
