--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,6 +17,8 @@ jobs:
       run: yarn
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+    - name: run NextJS frontend
+      run: npm run dev
     - name: Run Playwright tests
       run: yarn playwright test
     - uses: actions/upload-artifact@v3
