--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,7 +18,9 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: run NextJS frontend
-      run: npm run dev
+      run: |
+        npm run dev &
+        sleep 2
     - name: Run Playwright tests
       run: yarn playwright test
     - uses: actions/upload-artifact@v3
